--- a/golang/gox/versions/1.8/Dockerfile
+++ b/golang/gox/versions/1.8/Dockerfile
@@ -1,6 +1,6 @@
 # gox (go v1.8)
 #
-# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/gox --osarch "linux/amd64" -output "dist/{{.OS}}_{{.Arch}}"
+# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-gox --osarch "linux/amd64" -output "dist/{{.OS}}_{{.Arch}}"
 
 FROM supinf/go:1.8
 
