--- a/golang/dep/versions/1.8/Dockerfile
+++ b/golang/dep/versions/1.8/Dockerfile
@@ -4,8 +4,8 @@
 
 FROM alpine:3.5
 
-# Commit at Feb 13, 2017, 18:42 PM
-ENV GODEP_VERSION=82f15142736267690ad3dad1f8075643b13c2e7b \
+# Commit at Apr 17, 2017, 19:21 PM UTC
+ENV GODEP_VERSION=477398819a549a19de3927435f70c43bb600e27c \
     GOPATH=/go
 
 WORKDIR /go/src
@@ -14,9 +14,9 @@ RUN apk --no-cache add git
 RUN apk --no-cache add --virtual build-dependencies bash gcc musl-dev openssl go \
 
     # Install go 1.8
-    && GOLANG_VERSION=1.8 \
+    && GOLANG_VERSION=1.8.1 \
     && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=406865f587b44be7092f206d73fc1de252600b79b3cacc587b74b5ef5c623596 \
+    && GOLANG_SRC_SHA256=33daf4c03f86120fdfdc66bddf6bfff4661c7ca11c5da473e537f4d69b470e57 \
     && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
     && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
     && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
