--- a/golang/swagger/versions/0.x/Dockerfile
+++ b/golang/swagger/versions/0.x/Dockerfile
@@ -1,21 +1,21 @@
-# go-swagger v0.8.x
+# go-swagger
 #
 # docker run --rm -v $(pwd):/go/src supinf/go-swagger validate ./swagger.yml
 # docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-swagger generate server -A sample -f ./swagger.yml
 # docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-swagger generate client -A sample -f ./swagger.yml
 
-FROM alpine:3.5
+FROM alpine:3.6
 
-# Commit at Feb 16, 2017, 06:57 AM
-ENV SWAGGER_VERSION=54d23b6fa46c29ccb7e834154e2f0c0fba33f0d1 \
+# Commit at May 22, 2017, 02:20 AM
+ENV SWAGGER_VERSION=a8365027ee3ff55ad46a33574f5551e93a417209 \
     GOPATH=/go
 
 RUN apk --no-cache add --virtual build-dependencies bash gcc musl-dev openssl go git \
 
     # Install go 1.8
-    && GOLANG_VERSION=1.8 \
+    && GOLANG_VERSION=1.8.3 \
     && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=406865f587b44be7092f206d73fc1de252600b79b3cacc587b74b5ef5c623596 \
+    && GOLANG_SRC_SHA256=5f5dea2447e7dcfdc50fa6b94c512e58bfba5673c039259fd843f68829d99fa6 \
     && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
     && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
     && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
