make swagger-mock-api more flexible

--- a/nodejs/swagger-mock-api/versions/1.6/Dockerfile
+++ b/nodejs/swagger-mock-api/versions/1.6/Dockerfile
@@ -1,16 +1,19 @@
 # swagger-mock-api v1.6.0
 #
-# docker run --rm -p 80:8000 supinf/swagger-mock-api
-# docker run --rm -p 80:8000 -v `pwd`:/api supinf/swagger-mock-api
+# docker run --rm -p 80:8000 supinf/swagger-mock-api:1.6
+# docker run --rm -p 80:8000 -e SWAGGER_YAML_PATH=/spec/custom-api.yaml \
+#     -v `pwd`/spec:/spec supinf/swagger-mock-api:1.6
 
-FROM alpine:3.5
+FROM alpine:3.6
 
 ENV MOCKAPI_VERSION=1.6.0 \
-    NODE_VERSION=7.2.1-r1
+    SWAGGER_YAML_PATH=/api/swagger.yaml \
+    NODE_VERSION=7.10.1-r0
 
 WORKDIR /server
 
-RUN apk --no-cache add tini nodejs-current=${NODE_VERSION} \
+RUN apk --no-cache add tini nodejs-current=${NODE_VERSION}
+RUN apk --no-cache add --virtual build-deps nodejs-current-npm=${NODE_VERSION} \
 
     # Install Grunt packages
     && npm install --global "grunt-cli@1.2.0" \
@@ -22,6 +25,7 @@ RUN apk --no-cache add tini nodejs-current=${NODE_VERSION} \
 
     # Clean up
     && rm -rf /root/.npm \
+    && apk del --purge -r build-deps \
     && find / -depth -type d -name test* -exec rm -rf {} \; \
     && find / -depth -type f -name *.md -exec rm -f {} \; \
     && find / -depth -type f -name *.yml -exec rm -f {} \;
@@ -31,5 +35,4 @@ ADD Gruntfile.js /server/Gruntfile.js
 # Add sample of API definitions
 ADD petstore.yaml /api/swagger.yaml
 
-ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["grunt"]
+ENTRYPOINT ["/sbin/tini", "--", "grunt"]
