--- a/golang/dep/versions/0.3/Dockerfile
+++ b/golang/dep/versions/0.3/Dockerfile
@@ -1,11 +1,11 @@
-# golang/dep (go v1.8)
+# golang/dep v0.3
 #
-# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-dep ensure
+# docker run --rm supinf/go-dep:0.3 --help
+# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-dep:0.3 ensure
 
 FROM alpine:3.6
 
-# Commit at Jul 13, 2017, 18:34 PM UTC
-ENV GODEP_VERSION=a1db233415681e627e46068ad7a1e3974c78675b \
+ENV GODEP_VERSION=v0.3.1 \
     GOPATH=/go
 
 WORKDIR /go/src
@@ -13,15 +13,15 @@ WORKDIR /go/src
 RUN apk --no-cache add git
 RUN apk --no-cache add --virtual build-dependencies bash gcc musl-dev openssl go \
 
-    # Install go 1.8
-    && GOLANG_VERSION=1.8.3 \
+    # Install go 1.9
+    && GOLANG_VERSION=1.9 \
     && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=5f5dea2447e7dcfdc50fa6b94c512e58bfba5673c039259fd843f68829d99fa6 \
+    && GOLANG_SRC_SHA256=a4ab229028ed167ba1986825751463605264e44868362ca8e7accc8be057e993 \
     && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
     && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
     && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
     && tar -C /usr/local -xzf golang.tar.gz \
-    && wget -q https://raw.githubusercontent.com/docker-library/golang/master/1.8/alpine3.6/no-pic.patch \
+    && wget -q https://raw.githubusercontent.com/docker-library/golang/master/1.9/alpine3.6/no-pic.patch \
     && cd /usr/local/go/src \
     && patch -p2 -i /go/src/no-pic.patch \
     && ./make.bash \
