--- a/python/awscli/versions/1.11/Dockerfile
+++ b/python/awscli/versions/1.11/Dockerfile
@@ -2,10 +2,12 @@
 
 FROM alpine:3.6
 
+ENV PAGER='cat'
+
 RUN apk --no-cache add python
 RUN apk --no-cache add --virtual build-dependencies py2-pip \
       && apk --no-cache add groff jq \
-      && pip install 'awscli == 1.11.165' \
+      && pip install 'awscli == 1.11.175' \
       && apk del --purge -r build-dependencies
 
 ENTRYPOINT ["aws"]
