--- a/golang/dep/versions/0.3/Dockerfile
+++ b/golang/dep/versions/0.3/Dockerfile
@@ -3,7 +3,7 @@
 # docker run --rm supinf/go-dep:0.3 --help
 # docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-dep:0.3 ensure
 
-FROM alpine:3.6
+FROM alpine:3.7
 
 ENV GODEP_VERSION=v0.3.2 \
     GOPATH=/go \
@@ -12,33 +12,17 @@ ENV GODEP_VERSION=v0.3.2 \
 WORKDIR /go/src
 
 RUN apk --no-cache add git
-RUN apk --no-cache add --virtual build-dependencies bash gcc musl-dev openssl go \
-
-    # Install go 1.9
-    && GOLANG_VERSION=1.9.2 \
-    && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=665f184bf8ac89986cfd5a4460736976f60b57df6b320ad71ad4cef53bb143dc \
-    && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
-    && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
-    && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
-    && tar -C /usr/local -xzf golang.tar.gz \
-    && wget -q https://raw.githubusercontent.com/docker-library/golang/master/1.9/alpine3.6/no-pic.patch \
-    && cd /usr/local/go/src \
-    && patch -p2 -i /go/src/no-pic.patch \
-    && ./make.bash \
-    && mkdir -p /go/src \
-    && chmod -R 777 /go \
-
-    # Compile golang/dep
+RUN apk --no-cache add --virtual build-dependencies gcc musl-dev go \
+    && chmod -R 777 $GOPATH \
     && go get -u github.com/golang/dep/... \
+    && rm -rf /go/bin/* \
     && cd /go/src/github.com/golang/dep \
     && git checkout ${GODEP_VERSION} \
-    && go install github.com/golang/dep/... \
-    && mv /go/bin/dep /usr/bin \
-
-    # Clean up
+    && cd cmd/dep/ \
+    && go build -ldflags "-s -w" \
+    && mv dep /usr/bin \
     && apk del --purge -r build-dependencies \
-    && rm -rf /usr/local/go /usr/lib/go /go /var/cache/* /var/lib/apk*
+    && rm -rf /go
 
 ENTRYPOINT ["dep"]
 CMD ["-h"]
