add GoogleCloudPlatform/container-structure-test doc

--- a/cli-tools/container-structure-test/versions/0.x/Dockerfile
+++ b/cli-tools/container-structure-test/versions/0.x/Dockerfile
@@ -1,7 +1,9 @@
 # GoogleCloudPlatform/container-structure-test
+#
+# docker run --rm supinf/container-struct-test:0.1 -h
 # docker run --rm --privileged -v /var/run/docker.sock:/var/run/docker.sock \
 #     -v $(pwd)/config:/config supinf/container-struct-test:0.1 \
-#     -image dockercloud/hello-world /config/test.yaml
+#     -image supinf/awscli:1.14 /config/test.yaml
 
 FROM docker:17.09-dind
 
@@ -24,6 +26,7 @@ RUN apk --no-cache add --virtual build-dependencies bash curl libgcc unzip \
        glibc-bin-${GLIBC_VERSION}.apk glibc-i18n-${GLIBC_VERSION}.apk \
     && /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib \
     && /usr/glibc-compat/bin/localedef -i en_US -f UTF-8 en_US.UTF-8 \
+    && rm -rf glibc-${GLIBC_VERSION}.apk glibc-bin-${GLIBC_VERSION}.apk glibc-i18n-${GLIBC_VERSION}.apk \
     && apk del --purge -r build-dependencies
 
 ENTRYPOINT ["container-structure-test"]
