--- a/python/awscli/versions/1.15/Dockerfile
+++ b/python/awscli/versions/1.15/Dockerfile
@@ -1,4 +1,6 @@
-# AWS CLI v1.14
+# AWS-CLI v1.15
+# docker run --rm pottava/awscli --version
+# docker run --rm -v $HOME/.aws:/root/.aws pottava/awscli iam list-users
 
 FROM alpine:3.7
 
@@ -8,7 +10,7 @@ ENV PAGER=less \
 RUN apk --no-cache add python less
 RUN apk --no-cache add --virtual build-dependencies py2-pip \
       && apk --no-cache add groff jq \
-      && pip install 'awscli == 1.14.70' \
+      && pip install 'awscli == 1.15.4' \
       && apk del --purge -r build-dependencies
 
 ENTRYPOINT ["aws"]
