--- a/nodejs/gulp/versions/3.9/Dockerfile
+++ b/nodejs/gulp/versions/3.9/Dockerfile
@@ -1,39 +1,33 @@
 # Gulp v3.9.1
 
-FROM node:7.7.1-alpine
+FROM node:10.1.0-alpine
 
 ENV GULP_VERSION=3.9.1 \
-    DOCKER_VERSION=1.13.0
+    DOCKER_VERSION=18.03.1-ce
 
 RUN apk --no-cache add tini ca-certificates \
-
-    # Install Gulp
-    && npm install --global "gulp@${GULP_VERSION}" \
-
-    # Clean up
-    && rm -rf /root/.npm \
+    && yarn global add "gulp@${GULP_VERSION}" \
+    && rm -rf /usr/local/share/.cache/yarn \
     && find / -depth -type d -name test* -exec rm -rf {} \; \
     && find / -depth -type f -name *.md -exec rm -f {} \; \
     && find / -depth -type f -name *.yml -exec rm -f {} \;
 
 RUN apk --no-cache add --virtual build-deps curl \
-
-    # Install Docker
     && curl --location --silent --show-error -O \
-        https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz \
+        https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz \
     && tar xzf docker-${DOCKER_VERSION}.tgz \
     && cp docker/docker /usr/bin/docker \
-
-    # Clean up
-    && rm -rf /docker* \
+    && rm -rf /docker* .dockerenv \
     && apk del --purge -r build-deps
 
 WORKDIR /gulp
 
 ADD package.json /gulp/package.json
-
 RUN apk add --no-cache --virtual build-deps make g++ python-dev \
-    && npm install \
+    && yarn add package.json \
+    && rm -rf /usr/local/share/.cache/yarn \
+    && find / -depth -type f -name *.md -exec rm -f {} \; \
+    && find / -depth -type f -name *.yml -exec rm -f {} \; \
     && apk del --purge -r build-deps
 
 VOLUME /monitor
