--- a/nodejs/gulp/versions/3.9/package.json
+++ b/nodejs/gulp/versions/3.9/package.json
@@ -19,20 +19,18 @@
   },
   "homepage": "https://github.com/supinf/dockerized-tools",
   "devDependencies": {
-    "browserify": "^11.2.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
+    "browserify": "^16.2.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-duration": "0.0.0",
-    "gulp-plumber": "^1.0.1",
+    "gulp-eslint": "^4.0.2",
+    "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.7",
-    "gulp-shell": "^0.5.2",
-    "gulp-eslint": "^2.0.0",
-    "eslint-plugin-react": "^4.1.0",
-    "reactify": "^1.1.1",
-    "through2": "^2.0.0",
-    "vinyl-buffer": "^1.0.0"
+    "gulp-sass": "^4.0.1",
+    "gulp-shell": "^0.6.5",
+    "gulp-uglify": "^3.0.0",
+    "through2": "^2.0.3",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^2.0.2"
   }
 }
