--- a/golang/swagger/versions/0.x/Dockerfile
+++ b/golang/swagger/versions/0.x/Dockerfile
@@ -4,26 +4,23 @@
 # docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-swagger generate server -A sample -f ./swagger.yml
 # docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-swagger generate client -A sample -f ./swagger.yml
 
-FROM alpine:3.6
+FROM alpine:3.7
 
-ENV SWAGGER_VERSION=0.13.0 \
+ENV SWAGGER_VERSION=0.14.0 \
     GOPATH=/go
 
 RUN apk --no-cache add --virtual build-dependencies bash gcc musl-dev openssl go git \
 
-    # Install go 1.9
-    && GOLANG_VERSION=1.9.2 \
+    # Install go 1.10
+    && GOLANG_VERSION=1.10.2 \
     && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=665f184bf8ac89986cfd5a4460736976f60b57df6b320ad71ad4cef53bb143dc \
+    && GOLANG_SRC_SHA256=6264609c6b9cd8ed8e02ca84605d727ce1898d74efa79841660b2e3e985a98bd \
     && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
     && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
     && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
     && tar -C /usr/local -xzf golang.tar.gz \
-    && wget -q https://raw.githubusercontent.com/docker-library/golang/master/1.9/alpine3.6/no-pic.patch \
     && cd /usr/local/go/src \
-    && patch -p2 -i /no-pic.patch \
     && ./make.bash \
-    && export PATH=/go/bin:/usr/local/go/bin:$PATH \
     && mkdir -p /go/src \
     && chmod -R 777 /go \
 
@@ -31,12 +28,14 @@ RUN apk --no-cache add --virtual build-dependencies bash gcc musl-dev openssl go
     && go get -u github.com/go-swagger/go-swagger/cmd/swagger \
     && cd /go/src/github.com/go-swagger/go-swagger \
     && git checkout ${SWAGGER_VERSION} \
-    && go install github.com/go-swagger/go-swagger/cmd/swagger \
-    && mv /go/bin/swagger /usr/bin/ \
+    && go get -u github.com/mitchellh/gox \
+    && /go/bin/gox --osarch "linux/amd64" -ldflags "-s -w" -output /swagger \
+       github.com/go-swagger/go-swagger/cmd/swagger \
+    && mv /swagger /usr/bin/ \
 
     # Clean up
     && apk del --purge -r build-dependencies \
-    && rm -rf /usr/local/go /usr/lib/go /go /var/cache/* /var/lib/apk*
+    && rm -rf /usr/local/go /usr/lib/go /go /var/cache/* /var/lib/apk* /golang.tar.gz
 
 WORKDIR /go/src
 
