--- a/python/awscli/versions/1.15/Dockerfile
+++ b/python/awscli/versions/1.15/Dockerfile
@@ -1,16 +1,16 @@
 # AWS-CLI v1.15
 # docker run --rm pottava/awscli --version
-# docker run --rm -v $HOME/.aws:/root/.aws pottava/awscli iam list-users
+# docker run --rm -v $HOME/.aws:/root/.aws pottava/awscli sts get-caller-identity
 
-FROM alpine:3.7
+FROM alpine:3.8
 
 ENV PAGER=less \
     LESS="-eirMX"
 
-RUN apk --no-cache add python less
-RUN apk --no-cache add --virtual build-dependencies py2-pip \
+RUN apk --no-cache add python3 less
+RUN apk --no-cache add --virtual build-dependencies py3-pip \
       && apk --no-cache add groff jq \
-      && pip install 'awscli == 1.15.32' \
+      && pip3 install 'awscli == 1.15.72' \
       && apk del --purge -r build-dependencies
 
 ENTRYPOINT ["aws"]
