--- a/golang/gometalinter/versions/2.0/Dockerfile
+++ b/golang/gometalinter/versions/2.0/Dockerfile
@@ -3,7 +3,7 @@
 # docker run --rm -v $(pwd):/go/src/github.com/your-name/project -w /go/src/github.com/your-name/project supinf/gometalinter:2.0
 # docker run --rm -v $(pwd):/go/src/github.com/your-name/project -w /go/src/github.com/your-name/project supinf/gometalinter:2.0 --vendor --deadline 60s --disable-all --enable=megacheck --aggregate ./...
 
-FROM alpine:3.7
+FROM alpine:3.8
 
 ENV METALINTER_VERSION=v2.0.5 \
     PATH=/go/bin:/usr/local/go/bin:$PATH \
@@ -14,9 +14,9 @@ RUN apk --no-cache add less
 RUN apk --no-cache add --virtual build-deps bash gcc musl-dev openssl go git \
 
     # Install go 1.10
-    && GOLANG_VERSION=1.10.1 \
+    && GOLANG_VERSION=1.10.3 \
     && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=589449ff6c3ccbff1d391d4e7ab5bb5d5643a5a41a04c99315e55c16bbf73ddc \
+    && GOLANG_SRC_SHA256=567b1cc66c9704d1c019c50bef946272e911ec6baf244310f87f4e678be155f2 \
     && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
     && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
     && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
@@ -38,7 +38,7 @@ RUN apk --no-cache add --virtual build-deps bash gcc musl-dev openssl go git \
     && find /usr/local/go -depth -type d -name testdata -exec rm -rf {} \; \
     && find / -depth -type f -name "*_test.go" -exec rm -f {} \; \
     && find / -depth -type f -name README.md -exec rm -f {} \; \
-    && rm -rf /var/cache/* /var/lib/apk*
+    && rm -rf /var/cache/* /var/lib/apk* /golang.tar.gz
 
 WORKDIR /go/src
 
