--- a/python/awscli/versions/1.16/Dockerfile
+++ b/python/awscli/versions/1.16/Dockerfile
@@ -1,6 +1,6 @@
 # AWS-CLI v1.16
-# docker run --rm pottava/awscli --version
-# docker run --rm -v $HOME/.aws:/root/.aws pottava/awscli sts get-caller-identity
+# docker run --rm supinf/awscli:1.16 --version
+# docker run --rm -v $HOME/.aws:/root/.aws supinf/awscli:1.16 sts get-caller-identity
 
 FROM alpine:3.8
 
