--- a/golang/gometalinter/versions/2.0/Dockerfile
+++ b/golang/gometalinter/versions/2.0/Dockerfile
@@ -14,12 +14,12 @@ RUN apk --no-cache add less
 RUN apk --no-cache add --virtual build-deps bash gcc musl-dev openssl go git \
     && : \
     && : Install go 1.11 \
-    && GOLANG_VERSION=1.11 \
-    && GOLANG_SRC_URL=https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
-    && GOLANG_SRC_SHA256=afc1e12f5fe49a471e3aae7d906c73e9d5b1fdd36d52d72652dde8f6250152fb \
+    && GOLANG_VERSION=1.11.4 \
+    && GOLANG_SRC_URL="https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz" \
+    && GOLANG_SRC_SHA256="4cfd42 720a6b1e79a8024895fa6607b69972e8e32446df76d6ce79801bbadb15" \
     && export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
-    && wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
-    && echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
+    && wget -q "${GOLANG_SRC_URL}" -O golang.tar.gz \
+    && echo "${GOLANG_SRC_SHA256}  golang.tar.gz" | sha256sum -c - \
     && tar -C /usr/local -xzf golang.tar.gz \
     && cd /usr/local/go/src \
     && ./make.bash \
